// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render default 1`] = `
<div>
  <div
    class="lsbcc-popover"
  >
    <div
      class="popover-container left hide"
    >
      <div
        class="popover-main"
      >
        <div
          class="popover-title"
        >
          Title
        </div>
        <div
          class="popover-content"
        >
          <div>
            <p>
              Hover me
            </p>
            <p>
              Hover me
            </p>
          </div>
        </div>
      </div>
      <div
        class="arrow left"
      />
    </div>
    <button
      class="popover-children"
    >
      left
    </button>
  </div>
</div>
`;

exports[`<Popover /> should render popover with placement 1`] = `
<button
  class="popover-children"
>
  top
</button>
`;

exports[`<Popover /> should render popover with placement 2`] = `
<button
  class="popover-children"
>
  right
</button>
`;

exports[`<Popover /> should render popover with placement 3`] = `
<button
  class="popover-children"
>
  bottom
</button>
`;

exports[`<Popover /> should render popover with placement 4`] = `
<button
  class="popover-children"
>
  left
</button>
`;
